Создание и подключение бэка: список товаров (#14)
* Работа с бэком

* правки на свежую голову

* Подключение бэка к фронте
