# packages/backend/swagger.json
@@ -110,6 +110,61 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"CategoriesDTO": {
+				"description": "Стандартная DTO для категории",
+				"properties": {
+					"id": {
+						"type": "integer",
+						"format": "int32",
+						"example": 1
+					},
+					"name": {
+						"type": "string",
+						"example": "Процессоры"
+					}
+				},
+				"required": [
+					"id",
+					"name"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ProductDTO": {
+				"description": "Стандартный DTO для продукта",
+				"properties": {
+					"id": {
+						"type": "integer",
+						"format": "int32",
+						"example": 1
+					},
+					"name": {
+						"type": "string",
+						"example": "Intel-core i7"
+					},
+					"description": {
+						"type": "string",
+						"example": "Горячая штучка"
+					},
+					"price": {
+						"type": "number",
+						"format": "double",
+						"example": 12554.8
+					},
+					"category": {
+						"$ref": "#/components/schemas/CategoriesDTO"
+					}
+				},
+				"required": [
+					"id",
+					"name",
+					"description",
+					"price",
+					"category"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -338,6 +393,136 @@
 						"description": "Идентификатор существующего пользователя, которого нужно удалить",
 						"in": "path",
 						"name": "userId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/products": {
+			"get": {
+				"operationId": "ListProducts",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/ProductDTO"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"description": "Получить список всех товаров",
+				"tags": [
+					"Product"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/products/{productId}": {
+			"get": {
+				"operationId": "GetProduct",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ProductDTO"
+								}
+							}
+						}
+					},
+					"404": {
+						"description": "Not found",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/NotFoundErrorJSON"
+								},
+								"examples": {
+									"Example 1": {}
+								}
+							}
+						}
+					}
+				},
+				"description": "Получить конкретный товар",
+				"tags": [
+					"Product"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"description": "ID товара",
+						"in": "path",
+						"name": "productId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/categories": {
+			"get": {
+				"operationId": "GetCategories",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/CategoriesDTO"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Product"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/categories/{categoryId}": {
+			"get": {
+				"operationId": "GetCategory",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/CategoriesDTO"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Product"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "categoryId",
 						"required": true,
 						"schema": {
 							"format": "double",
